# auth-engine

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  TECHNICAL.md  openapi.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: 0-ci.yml  1-build-push.yml  1-tag.yml  2-build-push.yml  3-release.yml  4-deploy.yml
alembic/: env.py
alembic/versions/: 03efaee5723b_add_sms_model.py  07feeec82aed_create_all_table_base.py  0ebc1d2aa8d5_change_avatar_url_string_to_text.py  e0f528e68aa9_add_all_tables.py
src/auth_engine/: cli.py  main.py
src/auth_engine/api/: ui_router.py
src/auth_engine/api/dependencies/: auth_deps.py  rbac.py
src/auth_engine/api/v1/: router.py
src/auth_engine/auth_strategies/: constants.py  email_password.py  webauthn.py
src/auth_engine/core/: bootstrap.py  config.py  postgres.py  security.py
src/auth_engine/models/: email_config.py  role.py  role_permission.py  sms_config.py  user.py  user_role.py
src/auth_engine/repositories/: email_config_repo.py  sms_config_repo.py
src/auth_engine/schemas/: contact.py  email_config.py  mfa.py  oauth.py  rbac.py  service_api_key.py  sms_config.py  tenant.py  tenant_auth_config.py  tenant_social_provider.py  user.py  webauthn.py
src/auth_engine/services/: auth_service.py  communications_config_service.py  magic_link_service.py  role_service.py  social_provider_service.py  tenant_auth_config_service.py  tenant_config_resolver.py  tenant_service.py  totp_service.py
(+39 files in other folders)
